SAK-18135
git-svn-id: https://source.sakaiproject.org/svn/content/trunk@74314 66ffb92e-73f9-0310-93c1-f5514f145a0a